--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <td id="previous-due-in-dining">00</td>
                                 </tr>
                                 <tr class="row-height-spacing">
-                                    <td id="garageOrextra">Garage Bill</td>
+                                    <td id="garageOrextra">Garage & Extra</td>
                                     <td>=</td>
                                     <td id="garage-bill">00</td>
                                 </tr>
